// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-903"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root makeStyles-root-904 makeStyles-root-906"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input makeStyles-input-905"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-924 makeStyles-noShrink-925"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root MuiBox-root-241"
>
  <div
    className="MuiBox-root MuiBox-root-242"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-263"
  >
    <button
      className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-264"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-265"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-266"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-267"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root MuiFab-root makeStyles-root-268 MuiFab-extended makeStyles-extended-269 MuiFab-secondary makeStyles-secondary-271 MuiFab-sizeSmall makeStyles-sizeSmall-270"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <div
          className="MuiBox-root MuiBox-root-282"
        >
          <img
            alt="Download"
            className="makeStyles-root-283"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-288"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-291 makeStyles-weight-292"
          >
            Download
          </h6>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-334"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-337 makeStyles-weight-338"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-369"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-370"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-337 makeStyles-weight-371"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-372"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-373"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-337 makeStyles-weight-374"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-375"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-376"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-337 makeStyles-weight-377"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root MuiBox-root-378"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root MuiBox-root-380"
>
  <div
    className="MuiBox-root MuiBox-root-381"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-382"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root MuiBox-root-387"
  >
    <div
      className="MuiBox-root MuiBox-root-388"
    >
      <img
        alt="Download"
        className="makeStyles-root-382"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root MuiBox-root-390"
>
  <div
    className="MuiBox-root MuiBox-root-391"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-394 makeStyles-weight-395 makeStyles-inline-392"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-394 makeStyles-weight-426 makeStyles-inline-392"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-427"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-weight-394 makeStyles-weight-428"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root MuiBox-root-429"
  />
  <div
    className="MuiBox-root MuiBox-root-430"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-431"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-437"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-499"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-614"
  >
    <div
      className="MuiBox-root MuiBox-root-615"
    >
      <div
        className="MuiBox-root MuiBox-root-616"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate INFO toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-639 makeStyles-weight-640"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-info-673"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-709 makeStyles-message-677"
          >
            <div
              className="makeStyles-iconBackground-678"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-710"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-info-673 makeStyles-weight-639 makeStyles-weight-715"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-710"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-725"
    >
      <div
        className="MuiBox-root MuiBox-root-726"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate WARN toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-639 makeStyles-weight-727"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-warning-674"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-728 makeStyles-message-677"
          >
            <div
              className="makeStyles-iconBackground-678"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-710"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-warning-674 makeStyles-weight-639 makeStyles-weight-729"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-710"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-730"
    >
      <div
        className="MuiBox-root MuiBox-root-731"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate ERROR toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-639 makeStyles-weight-732"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-error-672"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-733 makeStyles-message-677"
          >
            <div
              className="makeStyles-iconBackground-678"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-710"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-error-672 makeStyles-weight-639 makeStyles-weight-734"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-710"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-511"
  >
    <div
      className="makeStyles-container-513"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-516"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-521"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-524 makeStyles-weight-525 makeStyles-inline-522"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-513"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-516"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-559"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root MuiTypography-h4 makeStyles-weight-558 makeStyles-weight-590"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-591"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root MuiTypography-h5 makeStyles-weight-558 makeStyles-weight-592"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-593"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-h6 makeStyles-weight-558 makeStyles-weight-594"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-595"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-weight-558 makeStyles-weight-596"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-597"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body2 makeStyles-weight-558 makeStyles-weight-598"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-599"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-558 makeStyles-weight-600"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-601"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-558 makeStyles-weight-602"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-603"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-558 makeStyles-weight-604 makeStyles-inline-556"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-558 makeStyles-weight-605 makeStyles-inline-556"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-802"
  >
    <div
      className="makeStyles-dropdown-803"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root makeStyles-root-804 makeStyles-root-806"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input makeStyles-input-805"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-807 makeStyles-noShrink-808"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root MuiBox-root-833"
>
  <div
    className="MuiBox-root MuiBox-root-834"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-error Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-899"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-900"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-disabled Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-901"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-902"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root MuiBox-root-937"
  id="/account"
>
  <div
    className="MuiBox-root MuiBox-root-938"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-941 makeStyles-weight-942 makeStyles-inline-939"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-941 makeStyles-weight-973 makeStyles-inline-939"
    >
       
      Status
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-974"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-975"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-941 makeStyles-weight-976"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-977"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root makeStyles-root-978 makeStyles-root-980"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input makeStyles-input-979"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-998 makeStyles-noShrink-999"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-1003"
    />
    <div
      className="MuiBox-root MuiBox-root-1004"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-1009"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-941 makeStyles-weight-1028"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1029"
        />
        <div
          className="MuiBox-root MuiBox-root-1033"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-1031"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-1030"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-998"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-1032"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1035"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-1036"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-941 makeStyles-weight-1037"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1038"
        />
        <div
          className="MuiBox-root MuiBox-root-1039"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-1031"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-1030"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-998"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-1032"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1040"
  />
  <div
    className="MuiBox-root MuiBox-root-1041"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-998"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Bierzo wallet Payment page 1`] = `
<div
  className="MuiBox-root-6 MuiBox-root-7 makeStyles-payment-1"
>
  <div
    className="MuiBox-root-6 MuiBox-root-8 makeStyles-currencyToSend-2"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-37"
      >
        <div
          className="MuiAvatar-root-38 makeStyles-avatar-9 MuiAvatar-colorDefault-39"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 "
            color="#ffffff"
            data-icon="user"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <h6
          className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-44"
        >
          You send
        </h6>
        <div
          className="MuiBox-root-6 MuiBox-root-75"
        >
          <form
            onSubmit={[Function]}
          >
            <div
              className="MuiBox-root-6 MuiBox-root-76"
            >
              <div
                className="MuiBox-root-6 MuiBox-root-77"
              >
                <div
                  className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
                >
                  <div
                    className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97"
                    onClick={[Function]}
                  >
                    <fieldset
                      aria-hidden={true}
                      className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                      style={
                        Object {
                          "paddingLeft": 8,
                        }
                      }
                    >
                      <legend
                        className="MuiPrivateNotchedOutline-legend-114"
                        style={
                          Object {
                            "width": 0.01,
                          }
                        }
                      >
                        <span
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "&#8203;",
                            }
                          }
                        />
                      </legend>
                    </fieldset>
                    <input
                      aria-invalid={false}
                      className="MuiInputBase-input-106 MuiOutlinedInput-input-91"
                      disabled={false}
                      name="quantityField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="0,00"
                      required={true}
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                className="MuiBox-root-6 MuiBox-root-115"
              >
                <div
                  className="makeStyles-dropdown-116"
                  onClick={[Function]}
                >
                  <div
                    className="MuiInputBase-root-96 makeStyles-root-117 makeStyles-root-119"
                    onClick={[Function]}
                    role="button"
                  >
                    <input
                      autoComplete="off"
                      className="MuiInputBase-input-106 makeStyles-input-118"
                      name="currencyField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      readOnly={true}
                      type="text"
                      value=""
                    />
                  </div>
                  <img
                    alt="Phone Menu"
                    className="makeStyles-root-120 makeStyles-noShrink-121"
                    height="5"
                    src="selectChevron.svg"
                    width="8"
                  />
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          className="MuiBox-root-6 MuiBox-root-125"
        >
          <h6
            className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextSecondary-71 makeStyles-weight-43 makeStyles-weight-126"
          >
            balance: 
            24
             
            IOV
          </h6>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-127 makeStyles-receiverAddress-3"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-128"
      >
        <h6
          className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-129"
        >
          To
        </h6>
        <div
          className="MuiBox-root-6 MuiBox-root-130"
        >
          <form
            onSubmit={[Function]}
          >
            <div
              className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
            >
              <div
                className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97"
                onClick={[Function]}
              >
                <fieldset
                  aria-hidden={true}
                  className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                  style={
                    Object {
                      "paddingLeft": 8,
                    }
                  }
                >
                  <legend
                    className="MuiPrivateNotchedOutline-legend-114"
                    style={
                      Object {
                        "width": 0.01,
                      }
                    }
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </legend>
                </fieldset>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input-106 MuiOutlinedInput-input-91"
                  disabled={false}
                  name="addressField"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="IOV or wallet address"
                  required={true}
                  type="text"
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="MuiBox-root-6 MuiBox-root-131"
        >
          <h6
            className="MuiTypography-root-45 MuiTypography-subtitle1-56 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-132"
          >
            How it works
          </h6>
          <div
            className="MuiBox-root-6 MuiBox-root-133"
          >
            <div
              className="makeStyles-container-135"
              onClick={[Function]}
            >
              <img
                alt="Info"
                className="makeStyles-root-120"
                height={16}
                src="info_normal.svg"
                width={16}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-138 makeStyles-textNote-4"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-139"
      >
        <div
          className="MuiBox-root-6 MuiBox-root-140"
        >
          <div
            className="MuiBox-root-6 MuiBox-root-141"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-sticky-note fa-w-14 fa-lg "
              color="#a2a6a8"
              data-icon="sticky-note"
              data-prefix="far"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M448 348.106V80c0-26.51-21.49-48-48-48H48C21.49 32 0 53.49 0 80v351.988c0 26.51 21.49 48 48 48h268.118a48 48 0 0 0 33.941-14.059l83.882-83.882A48 48 0 0 0 448 348.106zm-128 80v-76.118h76.118L320 428.106zM400 80v223.988H296c-13.255 0-24 10.745-24 24v104H48V80h352z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <div
            className="MuiBox-root-6 MuiBox-root-142"
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
              >
                <div
                  className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97 MuiInputBase-multiline-104 MuiOutlinedInput-multiline-89"
                  onClick={[Function]}
                >
                  <fieldset
                    aria-hidden={true}
                    className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                    style={
                      Object {
                        "paddingLeft": 8,
                      }
                    }
                  >
                    <legend
                      className="MuiPrivateNotchedOutline-legend-114"
                      style={
                        Object {
                          "width": 0.01,
                        }
                      }
                    >
                      <span
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "&#8203;",
                          }
                        }
                      />
                    </legend>
                  </fieldset>
                  <textarea
                    aria-invalid={false}
                    className="MuiInputBase-input-106 MuiOutlinedInput-input-91 MuiInputBase-inputMultiline-108 MuiOutlinedInput-inputMultiline-93"
                    disabled={false}
                    name="textNoteField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Add a note"
                    required={false}
                    rows="2"
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-143 makeStyles-continue-5"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root-161 Mui-disabled MuiButton-root-144 MuiButton-contained-152 MuiButton-containedPrimary-153 Mui-disabled MuiButton-fullWidth-160"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="submit"
      >
        <span
          className="MuiButton-label-145"
        >
          Continue
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Bierzo wallet Welcome page 1`] = `
<div
  className="MuiBox-root-166 MuiBox-root-167 makeStyles-welcome-164"
>
  <div
    className="MuiBox-root-166 MuiBox-root-168 makeStyles-icon-165"
  >
    <img
      alt="Logo"
      className="makeStyles-root-169"
      src="iov-logo.svg"
    />
  </div>
  <div
    className="MuiBox-root-166 MuiBox-root-174"
  >
    <h6
      className="MuiTypography-root-179 MuiTypography-h6-189 makeStyles-weight-177 makeStyles-weight-178"
    >
      IOV Wallet
    </h6>
  </div>
  <div
    className="MuiBox-root-166 MuiBox-root-209"
  >
    <button
      className="MuiButtonBase-root-227 MuiButton-root-210 MuiButton-contained-218 MuiButton-containedPrimary-219 MuiButton-fullWidth-226"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-211"
      >
        NEXT
      </span>
      <span
        className="MuiTouchRipple-root-230"
      />
    </button>
  </div>
  <div>
    testing interaction with extension
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1050"
  id="/login"
>
  <div
    className="MuiBox-root MuiBox-root-1051"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1054 makeStyles-weight-1055 makeStyles-inline-1052"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1054 makeStyles-weight-1086 makeStyles-inline-1052"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1087"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1088"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1126"
      >
        <div
          className="MuiBox-root MuiBox-root-1127"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-1148"
    >
      <div
        className="MuiBox-root MuiBox-root-1149"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-1054 makeStyles-weight-1150 makeStyles-inline-1052 makeStyles-link-1053"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1151"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-1054 makeStyles-weight-1152 makeStyles-inline-1052 makeStyles-link-1053"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1153"
  />
  <div
    className="MuiBox-root MuiBox-root-1154"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1155"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root MuiBox-root-1161"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root MuiBox-root-1162"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1165 makeStyles-weight-1166 makeStyles-inline-1163"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1165 makeStyles-weight-1197 makeStyles-inline-1163"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1198"
  >
    <div
      className="MuiBox-root MuiBox-root-1199"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1165 makeStyles-weight-1200"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1201"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root MuiFab-root makeStyles-root-1202 MuiFab-extended makeStyles-extended-1203 MuiFab-secondary makeStyles-secondary-1205 MuiFab-sizeSmall makeStyles-sizeSmall-1204"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          <div
            className="MuiBox-root MuiBox-root-1219"
          >
            <img
              alt="Download"
              className="makeStyles-root-1220"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root MuiBox-root-1225"
          >
            <h6
              className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-1165 makeStyles-weight-1226"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1227"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1165 makeStyles-weight-1228 makeStyles-inline-1163"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1229"
    >
      <div
        className="MuiBox-root MuiBox-root-1230"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1248"
  />
  <div
    className="MuiBox-root MuiBox-root-1249"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1220"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Restore Account Restore 1`] = `
<div
  className="MuiBox-root MuiBox-root-1261"
  id="/restore-account"
>
  <div
    className="MuiBox-root MuiBox-root-1262"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1265 makeStyles-weight-1266 makeStyles-inline-1263"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1265 makeStyles-weight-1297 makeStyles-inline-1263"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1298"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1265 makeStyles-weight-1299 makeStyles-inline-1263"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1300"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <textarea
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              rows={5}
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1338"
      >
        <div
          className="MuiBox-root MuiBox-root-1339"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1360"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Restore
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1361"
  />
  <div
    className="MuiBox-root MuiBox-root-1362"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1363"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Share Identity Share Identity 1`] = `
<div
  className="MuiBox-root MuiBox-root-1379"
>
  <div
    className="MuiBox-root MuiBox-root-1380"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1383 makeStyles-weight-1384 makeStyles-inline-1381"
    >
      Share
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1383 makeStyles-weight-1415 makeStyles-inline-1381"
    >
       
      identity
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1416"
  >
    <div
      className="MuiBox-root MuiBox-root-1417"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1383 makeStyles-weight-1418"
      >
        The following site:
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1383 makeStyles-weight-1419"
      >
        http://finex.com
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1383 makeStyles-weight-1420 makeStyles-inline-1381"
      >
        wants to see you identity on
      </p>
       
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1383 makeStyles-weight-1421 makeStyles-inline-1381"
      >
        BTC
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1422"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Accept
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1443"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Reject
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1444"
  />
  <div
    className="MuiBox-root MuiBox-root-1445"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1446"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1462"
  id="/signup1"
>
  <div
    className="MuiBox-root MuiBox-root-1463"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1466 makeStyles-weight-1467 makeStyles-inline-1464"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1466 makeStyles-weight-1498 makeStyles-inline-1464"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1499"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1500"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1557"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1558"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1559"
      >
        <div
          className="MuiBox-root MuiBox-root-1560"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1581"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1582"
  />
  <div
    className="MuiBox-root MuiBox-root-1583"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1584"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1600"
  id="/signup2"
>
  <div
    className="MuiBox-root MuiBox-root-1601"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1604 makeStyles-weight-1605 makeStyles-inline-1602"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1604 makeStyles-weight-1636 makeStyles-inline-1602"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1637"
  >
    <div
      className="MuiBox-root MuiBox-root-1638"
    >
      <div
        className="MuiBox-root MuiBox-root-1639"
      >
        <div
          className="MuiBox-root MuiBox-root-1640"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1604 makeStyles-weight-1641 makeStyles-inline-1602"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1643"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1646"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          className="MuiSwitch-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-icon"
              />
              <input
                className="MuiPrivateSwitchBase-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiSwitch-bar"
          />
        </span>
        <span
          className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
        />
      </label>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1682"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1604 makeStyles-weight-1683 makeStyles-inline-1602"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1684"
    >
      <div
        className="MuiBox-root MuiBox-root-1685"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1703"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1704"
  />
  <div
    className="MuiBox-root MuiBox-root-1705"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1646"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1717"
  id="/signup3"
>
  <div
    className="MuiBox-root MuiBox-root-1718"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1721 makeStyles-weight-1722 makeStyles-inline-1719"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1721 makeStyles-weight-1753 makeStyles-inline-1719"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1754"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1721 makeStyles-weight-1755 makeStyles-inline-1719"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1756"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1794"
      >
        <div
          className="MuiBox-root MuiBox-root-1795"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1816"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1817"
  />
  <div
    className="MuiBox-root MuiBox-root-1818"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1819"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1835"
  id="/welcome"
>
  <div
    className="MuiBox-root MuiBox-root-1836"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1839 makeStyles-weight-1840 makeStyles-inline-1837"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1839 makeStyles-weight-1871 makeStyles-inline-1837"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1872"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1839 makeStyles-weight-1873 makeStyles-inline-1837"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root MuiBox-root-1874"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1895"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1896"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1897"
  />
  <div
    className="MuiBox-root MuiBox-root-1898"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1899"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
